completed all ex but not 09-06

--- a/exercises/09-the-dom/01-about-me/css/styles.css
+++ b/exercises/09-the-dom/01-about-me/css/styles.css
@@ -1,6 +1,14 @@
+/* Personalized styles for the list items */
 .list-item {
-    color: white;
-    font-weight: bold;
-    background-color: orange;
-  }
-  
+  color: white;
+  font-weight: bold;
+  background-color: orange;
+}
+
+img {
+  max-width: 300px; 
+  height: auto;    
+  border-radius: 10px; 
+  display: block;
+  margin-top: 20px;
+}
