--- a/exercises/10-events-and-listeners/04-enhanced-catwalk/css/styles.css
+++ b/exercises/10-events-and-listeners/04-enhanced-catwalk/css/styles.css
@@ -1,9 +1,18 @@
+/* ========== RESET ========== */
+/* Reset browser default spacing and box model */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+/* ========== GLOBAL STYLES ========== */
 .infodisplay {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
+    justify-content: center; 
   }
 
 .buttons {
